--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2021"
 
 [dependencies]
 clap = "4.5.4"
+dirs-next = "2.0.0"
 serde = { version = "1.0.201", features = ["derive"]}
 serde_json = "1.0.117"
