--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ colored = "2.1.0"
 dirs-next = "2.0.0"
 serde = { version = "1.0.201", features = ["derive"]}
 serde_json = "1.0.117"
+tui = "0.19"
+crossterm = "0.20"
